--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "aws-amplify": "^6.6.0",
+    "@aws-amplify/ui-react-storage": "^0.0.0-storage-browser-670d987-20240905191734",
+    "aws-amplify": "^6.6.1-storage-browser.4949269.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
