--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "aws-amplify": "^6.6.1-storage-browser.4949269.0",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@aws-amplify/storage": "storage-browser",
+    "@aws-amplify/ui": "storage-browser",
+    "@aws-amplify/ui-react": "storage-browser"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.2.1",
