--- a/package.json
+++ b/package.json
@@ -13,17 +13,11 @@
     "aws-amplify": "^6.6.1-storage-browser.4949269.0",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18",
-    "@aws-amplify/storage": "storage-browser",
-    "@aws-amplify/ui": "storage-browser",
-    "@aws-amplify/ui-react": "storage-browser"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.2.1",
     "@aws-amplify/backend-cli": "^1.2.5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "aws-cdk": "^2.156.0",
     "aws-cdk-lib": "^2.156.0",
     "constructs": "^10.3.0",
@@ -32,7 +26,6 @@
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.0",
-    "typescript": "^5.5.4"
+    "tsx": "^4.19.0"
   }
 }
